fix keyboard layout, add button press animation and prepare for shift keys

--- a/app/assets/stylesheets/application/index.css.scss
+++ b/app/assets/stylesheets/application/index.css.scss
@@ -68,10 +68,9 @@ h1 {
   font-size: 32px;
 }
 
-
 .letter {
   display: inline-block;
-  width: 50px;
+  width: 75px;
   margin: 0.2em;
   min-height: 50px;
   background: transparent;
@@ -83,3 +82,4 @@ h1 {
   zoom: 1;
   *display: inline;
 }
+
